login set attribute

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <form class="form">
       <label class="label">Email-адреса: </label>
-      <input class="email input" type="text" name="email" /><span class="error email-error"></span>
+      <input class="email input" type="text" name="email" placeholder="example@gmail.com"/><span class="error email-error"></span>
 
       <label class="label">Телефон: </label>
       <input class="user-phone input" type="text" name="phone" placeholder="+380" /><span class="error phone-error"></span>
